@@ -1,4 +1,4 @@
-# Note: this file was auto-generated by Module::Build::Compat version 0.3603
+# Note: this file was auto-generated by Module::Build::Compat version 0.3607
 use ExtUtils::MakeMaker;
 WriteMakefile
 (
@@ -6,7 +6,7 @@ WriteMakefile
           'VERSION_FROM' => 'lib/Perl/Critic/Policy/logicLAB/RequireVersionFormat.pm',
           'PREREQ_PM' => {
                            'List::MoreUtils' => '0',
-                           'Perl::Critic' => '0',
+                           'Perl::Critic' => '1.03',
                            'Perl::Critic::Utils' => '0',
                            'Test::Perl::Critic' => '0'
                          },
