@@ -5,7 +5,7 @@ AFFILIATION
     This policy is part of Perl::Critic::logicLAB distribution.
 
 VERSION
-    This documentation describes version 0.02
+    This documentation describes version 0.03
 
 DESCRIPTION
     This policy asserts that a specified version number conforms to a
@@ -28,7 +28,7 @@ DESCRIPTION
     The following example lines would not adhere to this format and would
     result in a violation.
 
-    * our ($VERSION) = '$Revision: 7269 $' =~ m{ \$Revision: \s+ (\S+) }x;
+    * our ($VERSION) = '$Revision: 7466 $' =~ m{ \$Revision: \s+ (\S+) }x;
     * $VERSION = '0.0.1';
     * $MyPackage::VERSION = 1.0.61;
     * use version; our $VERSION = qv(1.0.611);
@@ -92,7 +92,7 @@ BUGS AND LIMITATIONS
     I think it would be a good idea to ignore this particular version string
     and versions thereof:
 
-        our ($VERSION) = '$Revision: 7269 $' =~ m{ \$Revision: \s+ (\S+) }x;
+        our ($VERSION) = '$Revision: 7466 $' =~ m{ \$Revision: \s+ (\S+) }x;
 
     I am however still undecided.
 
